--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,10 @@
         "laravel-notification-channels/pushover": "^4.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "moneyphp/money": "^3.3",
         "pxlrbt/filament-spotlight": "^1.3",
         "spatie/laravel-sluggable": "^3.7",
+        "symfony/intl": "^7.2",
         "yoeriboven/laravel-log-db": "^1.4"
     },
     "require-dev": {
