--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /.phpunit.cache
 /node_modules
+/decs/node_modules
 /docs/public/node_modules
 /public/build
 /public/hot
@@ -24,3 +25,4 @@ yarn-error.log
 /.zed
 /packages
 /core
+/scratch
