feat: cleaned up search research, bug fixes

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -13,3 +13,4 @@ parameters:
     ignoreErrors:
         - '#Call to an undefined .*method Illuminate\\Database\\Eloquent\\Builder.*currentUser\(\)#'
         - '#Call to an undefined .*method Illuminate\\Database\\Eloquent\\Builder.*lowestPriceInDays\(\)#'
+        - '#Call to an undefined .*method Illuminate\\Contracts\\Database\\Eloquent\\Builder.*setFilters\(\)#'
