--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,55 +1,59 @@
-on: [push, pull_request]
+name: ci
 
-name: CI
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  tests:
-    runs-on: ubuntu-latest
-    container:
-      image: jez500/pricebuddy-tests-8.4:latest
 
-    services:
-      mysql:
-        image: mysql:5.7
-        env:
-          MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: tests_db
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+  # tests:
+  #   runs-on: ubuntu-latest
+  #   container:
+  #     image: jez500/pricebuddy-tests-8.4:latest
 
-    steps:
-      -
-        uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
-      -
-        name: Install composer dependencies
-        run: |
-          composer install --no-scripts
-      -
-        name: Install front-end dependencies
-        run: |
-          npm install
-          npm run build
-      -
-        name: Prepare Laravel Application
-        run: |
-          cp .env.ci .env
-          php artisan key:generate
-      -
-        name: Check coding standards
-        run: vendor/bin/pint --test -vv
-      -
-        name: Static code analysis
-        run: vendor/bin/phpstan analyse --memory-limit=1G
-      -
-        name: Run Testsuite
-        run: |
-          sed -i -e 's/tests_db/mysql/g' phpunit.xml
-          php artisan test
+  #   services:
+  #     mysql:
+  #       image: mysql:5.7
+  #       env:
+  #         MYSQL_ROOT_PASSWORD: password
+  #         MYSQL_DATABASE: tests_db
+  #       options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
+  #   steps:
+  #     -
+  #       uses: actions/checkout@v1
+  #       with:
+  #         fetch-depth: 1
+  #     -
+  #       name: Install composer dependencies
+  #       run: |
+  #         composer install --no-scripts
+  #     -
+  #       name: Install front-end dependencies
+  #       run: |
+  #         npm install
+  #         npm run build
+  #     -
+  #       name: Prepare Laravel Application
+  #       run: |
+  #         cp .env.ci .env
+  #         php artisan key:generate
+  #     -
+  #       name: Check coding standards
+  #       run: vendor/bin/pint --test -vv
+  #     -
+  #       name: Static code analysis
+  #       run: vendor/bin/phpstan analyse --memory-limit=1G
+  #     -
+  #       name: Run Testsuite
+  #       run: |
+  #         sed -i -e 's/tests_db/mysql/g' phpunit.xml
+  #         php artisan test
+          
   docker_build_push:
     if: startsWith(github.ref, 'refs/tags/v')
-    needs: tests
+    # needs: tests
     runs-on: ubuntu-latest
     steps:
       -
@@ -74,8 +78,6 @@ jobs:
           platforms: linux/amd64,linux/arm64
           file: ./docker/php.dockerfile
           push: true
-          tags: |
-            jez500/pricebuddy:${{ github.ref_name }}
-            jez500/pricebuddy:latest
+          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
           build-args: |
             APP_VERSION=${{ github.ref_name }}
